# skylog

./: .gitignore  LICENSE  README.md
.github/workflows/: ci.yml
dashboard/grafana/provisioning/dashboards/: dashboards.yaml
dashboard/grafana/provisioning/datasources/: influxdb.yaml
docs/: architecture.md
firmware/skylog-node/: .clangd  .gitignore  compile_commands.json  platformio.ini
firmware/skylog-node/include/: skylog_node.h
firmware/skylog-node/src/: main.cpp
server/skylog-server/: .gitignore  README.md  pyproject.toml
server/skylog-server/src/skylog/: __init__.py
server/skylog-server/tests/: test_skylog.py
